# internal/docs/swagger.json
@@ -493,13 +493,6 @@
                         "schema": {
                             "$ref": "#/definitions/dto.CreateOrderRequest"
                         }
-                    },
-                    {
-                        "type": "string",
-                        "description": "Bearer token",
-                        "name": "authorization",
-                        "in": "header",
-                        "required": true
                     }
                 ],
                 "responses": {
